[gd_scene load_steps=6 format=3 uid="uid://bu5t3cktwblie"]

[ext_resource type="Script" path="res://fps/turret.gd" id="1_vuds5"]

[sub_resource type="CylinderMesh" id="CylinderMesh_iyud6"]
radial_segments = 32
rings = 1

[sub_resource type="CylinderMesh" id="CylinderMesh_b8m36"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.0
radial_segments = 16
rings = 1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ugmu8"]
height = 1.41453

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4wy0k"]
height = 18.293
radius = 1.41431

[node name="Turret" type="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, 18)
script = ExtResource("1_vuds5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.482963, 0)
mesh = SubResource("CylinderMesh_iyud6")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.575874)
mesh = SubResource("CylinderMesh_b8m36")

[node name="Marker3D" type="Marker3D" parent="MeshInstance3D2"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.0910144, -0.906389)
gizmo_extents = 0.39

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.723146, 0)
shape = SubResource("CylinderShape3D_ugmu8")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.97249, -9.198)
shape = SubResource("CylinderShape3D_4wy0k")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
